tests-integration/fixtures/checking/1772565120_derive_functor_insufficient_params/Main.snap
---
source: tests-integration/tests/checking2/generated.rs
assertion_line: 28
expression: report
---
Terms
Pair :: forall (@a :: Type) (@b :: Type). (a :: Type) -> (b :: Type) -> Pair (a :: Type) (b :: Type)
Unit :: Unit

Types
Pair :: Type -> Type -> Type
Unit :: Type

Derived
derive Functor (Pair Int String)
derive Functor Unit

Roles
Pair = [Representational, Representational]
Unit = []

Diagnostics
error[CannotUnify]: Cannot unify 'Type' with 'Type -> Type'
  --> 6:25..6:42
  |
6 | derive instance Functor (Pair Int String)
  |                         ^~~~~~~~~~~~~~~~~
error[CannotUnify]: Cannot unify 'Type' with 'Type -> Type'
  --> 9:25..9:29
  |
9 | derive instance Functor Unit
  |                         ^~~~
error[CannotDeriveForType]: Cannot derive for type: Pair Int String
  --> 6:1..6:42
  |
6 | derive instance Functor (Pair Int String)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[CannotDeriveForType]: Cannot derive for type: Unit
  --> 9:1..9:29
  |
9 | derive instance Functor Unit
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
